--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+     <!-- Favicons -->
+
+<link rel="icon" type="image/png" href="images/favicon.png"/>
+<link rel="icon" type="image/png" href="https://example.com/favicon.png"/>
+
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/base.css">
@@ -30,9 +35,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"> -->
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -44,12 +49,12 @@
     ================================================== -->
     <div id="preloader">
         <div id="loader" class="dots-fade">
-            <div>P</div>
-            <div>R</div>
-            <div>E</div>
-            <div>R</div>
-            <div>N</div>
-            <div>A</div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
             
         </div>
     </div>
@@ -357,34 +362,52 @@ relatable and speak the brand's voice.
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/2.jpg" title="Windows in The City" data-size="1050x700">
-                            <img src="images/portfolio/2.jpg" 
-                                 srcset="images/portfolio/2.jpg 1x, images/portfolio/2@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/1.png" title="Reimagine" data-size="1050x700">
+                            <img src="images/portfolio/1.png" 
+                                 srcset="images/portfolio/1.png 1x, images/portfolio/1@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Branding</div>
                         <h4 class="folio-item__title">Windows in The City</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
                 </div>
             </div> <!-- end column -->
+             <div class="column" data-aos="fade-up">
+                <div class="folio-item">
+                    <div class="folio-item__thumb">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/7.png" title="The Lamp" data-size="1050x700">
+                            <img src="images/portfolio/7.png" 
+                                 srcset="images/portfolio/7.png 1x, images/portfolio/7@2x.png 2x" alt="">
+                        </a>
+                    </div>
+                    <div class="folio-item__info">
+                        <div class="folio-item__cat">Product Design</div>
+                        <h4 class="folio-item__title">The Lamp</h4>
+                    </div>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
+                    <div class="folio-item__caption">
+                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                    </div>
+                </div>
+            </div>
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/1.jpg" title="Building Blocks" data-size="1050x700">
-                            <img src="images/portfolio/1.jpg" 
-                                 srcset="images/portfolio/1.jpg 1x, images/portfolio/1@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/2.png" title="Building Blocks" data-size="1050x700">
+                            <img src="images/portfolio/2.png" 
+                                 srcset="images/portfolio/2.png 1x, images/portfolio/2@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Frontend Design</div>
                         <h4 class="folio-item__title">Building Blocks</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -393,16 +416,16 @@ relatable and speak the brand's voice.
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/3.jpg" Title="Shout and Jump" data-size="1050x700">
-                            <img src="images/portfolio/3.jpg" 
-                                 srcset="images/portfolio/3.jpg 1x, images/portfolio/3@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/3.png" Title="Shout and Jump" data-size="1050x700">
+                            <img src="images/portfolio/3.png" 
+                                 srcset="images/portfolio/3.png 1x, images/portfolio/3@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Branding</div>
                         <h4 class="folio-item__title">Shout & Jump</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -420,7 +443,7 @@ relatable and speak the brand's voice.
                         <div class="folio-item__cat">Frontend Design</div>
                         <h4 class="folio-item__title">Sand Dunes</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -429,16 +452,16 @@ relatable and speak the brand's voice.
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/5.jpg" title="Sand Dunes" data-size="1050x700">
-                            <img src="images/portfolio/5.jpg" 
-                                 srcset="images/portfolio/5.jpg 1x, images/portfolio/5@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/5.png" title="Sand Dunes" data-size="1050x700">
+                            <img src="images/portfolio/5.png" 
+                                 srcset="images/portfolio/5.png 1x, images/portfolio/5@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">Wooocraft</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -447,16 +470,16 @@ relatable and speak the brand's voice.
             <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/6.jpg" title="The Lamp" data-size="1050x700">
-                            <img src="images/portfolio/6.jpg" 
-                                 srcset="images/portfolio/6.jpg 1x, images/portfolio/6@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/6.png" title="The Lamp" data-size="1050x700">
+                            <img src="images/portfolio/6.png" 
+                                 srcset="images/portfolio/6.png 1x, images/portfolio/6@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">The Lamp</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -465,16 +488,16 @@ relatable and speak the brand's voice.
              <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/7.jpg" title="The Lamp" data-size="1050x700">
-                            <img src="images/portfolio/7.jpg" 
-                                 srcset="images/portfolio/7.jpg 1x, images/portfolio/7@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/8.png" title="The Lamp" data-size="1050x700">
+                            <img src="images/portfolio/8.png" 
+                                 srcset="images/portfolio/8.png 1x, images/portfolio/8@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">The Lamp</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -482,16 +505,16 @@ relatable and speak the brand's voice.
             </div> <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/8.jpg" title="The Lamp" data-size="1050x700">
-                            <img src="images/portfolio/8.jpg" 
-                                 srcset="images/portfolio/8.jpg 1x, images/portfolio/8@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/9.png" title="The Lamp" data-size="1050x700">
+                            <img src="images/portfolio/9.png" 
+                                 srcset="images/portfolio/9.png 1x, images/portfolio/9@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">The Lamp</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -499,33 +522,16 @@ relatable and speak the brand's voice.
             </div> <div class="column" data-aos="fade-up">
                 <div class="folio-item">
                     <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/9.jpg" title="The Lamp" data-size="1050x700">
-                            <img src="images/portfolio/9.jpg" 
-                                 srcset="images/portfolio/9.jpg 1x, images/portfolio/9@2x.jpg 2x" alt="">
+                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/10.png" title="The Lamp" data-size="1050x700">
+                            <img src="images/portfolio/10.png" 
+                                 srcset="images/portfolio/10.png 1x, images/portfolio/10@2x.png 2x" alt="">
                         </a>
                     </div>
                     <div class="folio-item__info">
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">The Lamp</h4>
                     </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
-                    <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
-                    </div>
-                </div>
-            </div> <div class="column" data-aos="fade-up">
-                <div class="folio-item">
-                    <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/10.jpg" title="The Lamp" data-size="1050x700">
-                            <img src="images/portfolio/10.jpg" 
-                                 srcset="images/portfolio/10.jpg 1x, images/portfolio/10@2x.jpg 2x" alt="">
-                        </a>
-                    </div>
-                    <div class="folio-item__info">
-                        <div class="folio-item__cat">Product Design</div>
-                        <h4 class="folio-item__title">The Lamp</h4>
-                    </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project Link</a>
+                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
