changes on html

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <ul class="header-nav">
                     <li><a class="smoothscroll" href="#hero" title="Intro">Design Fully Yours</a></li>
                     <li><a class="smoothscroll" href="#about" title="About">About Me</a></li>
-                    <li><a class="smoothscroll" href="#services" title="Services">Portfolio</a></li>
+                    <li><a class="smoothscroll" href="#portfolio" title="Services">Portfolio</a></li>
                     <!-- <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li> -->
-                    <li><a href="mailto:#0" title="Contact us">Reach to me</a></li>
+                    <li><a href="#reachtome" title="Contact us">Reach to me</a></li>
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
-            <a href="#0" class="btn btn--stroke btn--small">+91 90045 33858</a>
+            <a href="tel:+91 90045 33858" class="btn btn--stroke btn--small">+91 90045 33858</a>
 
         </div> <!-- end header-content -->
 
@@ -546,7 +546,7 @@ relatable and speak the brand's voice.
 
     <!-- footer
     ================================================== -->
-    <footer class="s-footer h-dark-bg">
+    <footer class="s-footer h-dark-bg" id="reachtome">
         
         <div class="right-vert-line"></div>
 
