--- a/index.html
+++ b/index.html
@@ -590,9 +590,9 @@ relatable and speak the brand's voice.
                         </h5>
                         <ul class="footer-contact-block__list">
                            
-                            <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Facebook</a></li>
-                            <li><a href="#0">LinkedIn</a></li>
+                            <li><a href="https://www.instagram.com/prerana06/" target="_blank">Instagram</a></li>
+                            <li><a href="https://www.facebook.com/prerana.bhasin/" target="_blank">Facebook</a></li>
+                            <li><a href="https://www.linkedin.com/in/prerana-bhasin-b7910277/" target="_blank">LinkedIn</a></li>
                         </ul>
                     </div> <!-- end footer-contact-block -->
                 </div>
