--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <div class="column large-full">
 
                 <h1>
-                A multidisciplinary designer who believes that design is a medium of communication,  a solution to a problem.
-                <br>I don't love to design, I live to design.
+                A multidisciplinary designer who believes that design is a medium of communication, a solution to a problem.
+                <br>I don’t love to design, I live to design
                 </h1>
               
                 <ul class="hero-social">
@@ -142,7 +142,7 @@
 
                     <div class="section-intro" data-num="01" data-aos="fade-up">
                         <h3 class="subhead">About Me</h3>
-                        <h1 class="display-1">A multidisciplinary designer who believes that design is a medium of communication, a solution to a problem. 
+                        <h1 class="display-1">Profile 
 </h1>
                     </div>
 
@@ -151,11 +151,12 @@
                              srcset="images/profile-pic.jpg 1x, images/profile-pic@2x.jpg 2x" alt="">
                     </div>
 
-                    <h3 data-aos="fade-up">Profile</h3>
+                    
 
                     <p data-aos="fade-up">
-                    I've worked across mediums - print, digital, broadcast and web. I enjoy working with bright colors and mixing mediums to create a final output. My endeavor is to create designs and experiences that make a brand more than "just a brand” by working alongside clients to build ideas to concepts and experiences that are relevant, 
-relatable and speak the brand's voice.
+                    A visual designer whose primary interest lies in the intersection of art, design and technology. Passionate, ambitious, optimistic, and self-assertive. Being obsessive over craft, making it personal and giving attention to detail. I'm curious, empathetic, rigorous, and experimental. I appreciate a holistic way of solving design problems in collaborative teams. I'm a firm believer that simple is hard and that design is truly about problem solving and making people's lives better.
+A go getter with a strong thirst for knowledge. Practical & attentive to detail, who combines art, design, and technology to engage target audiences. A hint of abstraction, quirkiness, experiment with colors, effective use of negative space, and clean design aesthetic are values that appear consistently in my work. 
+
 
                     </p>
 
