--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Design Fully Yours</title>
+    <title>Designfullyours</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -301,54 +301,65 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                     </h1>
                 </div>
 
-                <p class="lead" data-aos="fade-up">
-               My experience pans across mediums (space, print, digital, broadcast, web), but my favourite is space and experience design due to the interaction it allows. I'm a passionate leader of creative team of Brand Experience and Events team at The Walt Disney Company, I’ve led our team and helped transform the creative culture, community, and quality of work. I provide leadership, vision, and support for Visuals & Experiences for the virtual, broadcast and on-ground events and ensure that our design practice exceeds the highest industry standards.
-                </p>
+                <p data-aos="fade-up">
+               My experience pans across mediums (space, print, digital, broadcast, web), but my favourite is space and experience design due to the interaction it allows. I'm a passionate leader of creative team of Brand Experience and Events team at The Walt Disney Company, I’ve led our team and helped transform the creative culture, community, and quality of work. I provide leadership, vision, and support for Visuals & Experiences for the virtual, broadcast and on-ground events and ensure that our design practice exceeds the highest industry standards.</p>
+             <p>My endeavour is to create designs and experiences that make a brand more than “just a brand” by working alongside clients to build ideas to concepts and experiences that are relevant, relatable and speak the brand’s voice </p>
+            <p>I remain extremely hands-on, being actively involved in pixel-level detail, every day. I’ve had incredible opportunities to work with various design and event agencies on a wide range of projects. I have a 6 years industry experience, working across many different fields ranging from pure digital, web, on ground experiences, traditional graphic design, mobile, kiosk, brand identity and interactive space and events.
+
+</p>
             </div> <!-- end  s-services--leftcol -->
 
             <div class="column large-6">
                 <ul class="services-list" data-aos="fade-up">
                     <li class="services-list__item is-active">
                         <div class="services-list__item-header">
-                            <h5>Dec/2016 to Present</h5>
-                            <p>Designer and Visuliserfor Brand Experience and Event</p>
+                            <h5>Dec 2016 - Present</h5>
+                            <p>Designer and Visualizer for Brand Experience and Events at The Walt Disney Company (STAR India Pvt. Ltd), Mumbai</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>
-                           Providing functional design and creative ideation, Graphics Design, Creative art direction, Creative identity and Event experience, Mentoring and supporting inhouse and agency design team. Creating Experiencial gifts, Managing onground productions and developing UI design for portals.
-                            </p>
+                            <p>Providing functional design and creative ideation, graphic design, creative art direction, creating identity and event experience, mentoring and supporting the inhouse and agency design teams. Creating experiential gifts, managing on ground production and developing UI design for internal portal</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Jun/2016 to Dec/2016</h5>
-                            <p>Design Consultant</p>
+                            <h5>Jun 2016 - Dec 2016</h5>
+                            <p>Design Consultant for Hindustan Unilever at KYPSA, Mumbai</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>
-                           Providing functional design and creative ideation, Graphics Design, Creative art direction, Creative identity and Event experience, Mentoring and supporting inhouse and agency design team. Creating Experiencial gifts, Managing onground productions and developing UI design for portals.
-                            </p>
+                            <p>Graphic design, branding & strategizing, UI design, product and packaging prototyping</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Nov/2015 to May/2016</h5>
-                            <p>Assistant Wedding Designer</p>
+                            <h5>Nov 2015 - May 2016</h5>
+                            <p>Assistant Wedding Designer at Rohit Bal Luxury Weddings, New Delhi </p>
                         </div>
                         <div class="services-list__item-body">
-                             <p>
-                           Providing functional design and creative ideation, Graphics Design, Creative art direction, Creative identity and Event experience, Mentoring and supporting inhouse and agency design team. Creating Experiencial gifts, Managing onground productions and developing UI design for portals.
-                            </p>
+                             <p>Creative direction, event design and management, branding, conceptualizing, prototyping, material sourcing, production management and photography</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <li class="services-list__item">
                         <div class="services-list__item-header">
-                            <h5>Apr/2015 to Jul/2015</h5><p>Assistant Art Director</p>
+                            <h5>Apr 2015 - Jul 2015</h5><p>Assistant Art Director at 5queue Production, Mumbai</p>
                         </div>
                         <div class="services-list__item-body">
-                            <p>
-                           Providing functional design and creative ideation, Graphics Design, Creative art direction, Creative identity and Event experience, Mentoring and supporting inhouse and agency design team. Creating Experiencial gifts, Managing onground productions and developing UI design for portals.
-                            </p>
+                            <p>Production design, art direction, set Designing, prototyping, material sourcing, styling, product management and product photography</p>
+                        </div>
+                    </li>
+                    <li class="services-list__item">
+                        <div class="services-list__item-header">
+                            <h5>May 2014 - Sept 2014</h5><p>Visual Merchandiser at Bewakoof.com, Mumbai</p>
+                        </div>
+                        <div class="services-list__item-body">
+                            <p>Visual merchandising, branding, graphic designing, production management and product photography</p>
+                        </div>
+                    </li>
+                    <li class="services-list__item">
+                        <div class="services-list__item-header">
+                            <h5>Apr 2013 - Jun 2013</h5><p>Assistant Stylist at Eshaa Amiin Styling, Mumbai</p>
+                        </div>
+                        <div class="services-list__item-body">
+                            <p>Celebrity styling, material sourcing, garment sourcing, brand collaborations, photo shoots and PR</p>
                         </div>
                     </li> <!-- services-list__item -->
                     <!-- services-list__item -->
