logo and button changes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
-            <a href="tel:+91 90045 33858" class="btn btn--stroke btn--small">+91 90045 33858</a>
+            <a href="tel:+91 90045 33858" class="btn btn--stroke btn--small p-button"><span> Alohomora </span></a>
 
         </div> <!-- end header-content -->
 
