--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                     <h1 class="display-1">
                         A Selection of recent projects I have worked on.
                     </h1>
+                    <a href="projet.html" class="btn btn--stroke btn--small"><span> View All Projects </span></a>
                 </div>
             </div>
         </div> <!-- s-porfolio__header -->
