--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
-            <a href="tel:+91 90045 33858" class="btn btn--stroke btn--small p-button"><span> Alohomora </span></a>
+            <a href="images/Prerana Bhasin final cv.jpg" class="btn btn--stroke btn--small p-button" download="images/Prerana Bhasin final cv.jpg"><span> Alohomora </span></a>
 
         </div> <!-- end header-content -->
 
@@ -298,7 +298,7 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                         </div>
 
                         <p>
-                            Featured on a national television show <a href="youtu.be/zU8QMQmLPNY" target="_blank"> India's Got Talent</a>
+                            Featured on a national television show <a href="https://www.youtube.com/watch?v=zU8QMQmLPNY" target="_blank"> India's Got Talent</a>
 </p>
 <p>
 
