personal exploration added

--- a/hotstar.html
+++ b/hotstar.html
@@ -72,7 +72,7 @@
                     <li><a class="smoothscroll" href="index#about" title="About">About Me</a></li>
                     <li><a class="smoothscroll" href="index.html#portfolio" title="Services">Portfolio</a></li>
                     <!-- <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li> -->
-                    <li><a href="index.html#reachtome" title="Contact us">Reach to me</a></li>
+                    <li><a href="index.html#reachtome" title="Contact us">Contact</a></li>
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
@@ -185,7 +185,7 @@ Big Bang: An opulent and elegant photo opportunity inspired by the big bang. A s
         <div class="row s-footer__main">
             <div class="column large-6">
                 <div class="section-intro" data-aos="fade-up">
-                    <h3 class="subhead">Reach to me</h3>
+                    <h3 class="subhead">Contact</h3>
 
                     <h1 class="display-1">
                     Look for the nearest portkey or use floo powder to reach me but if you're a muggle then you can find me at- 
