--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <li><a class="smoothscroll" href="index.html#about" title="About">About Me</a></li>
                     <li><a class="smoothscroll" href="index.html#portfolio" title="Services">Portfolio</a></li>
                     <!-- <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li> -->
-                    <li><a class="smoothscroll" href="index.html#reachtome" title="Contact us">Reach to me</a></li>
+                    <li><a class="smoothscroll" href="index.html#reachtome" title="Contact us">Contact</a></li>
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
@@ -387,7 +387,7 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                     <h1 class="display-1">
                         A Selection of recent projects I have worked on.
                     </h1>
-                    <a href="projects.html" class="btn btn--stroke btn--small"><span> View All Projects </span></a>
+                    <a href="projects.html" class="btn btn--stroke btn--small"><span> Explore </span></a>
                 </div>
             </div>
         </div> <!-- s-porfolio__header -->
@@ -612,7 +612,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
         <div class="row s-footer__main">
             <div class="column large-6">
                 <div class="section-intro" data-aos="fade-up">
-                    <h3 class="subhead">Reach to me</h3>
+                    <h3 class="subhead">Contact</h3>
 
                     <h1 class="display-1">
                     You can use floo powder or find the nearest portkey to reach me. But if you're a muggle then just hit me up at - 
