--- a/indianadvertise.html
+++ b/indianadvertise.html
@@ -80,7 +80,7 @@
                     <!-- <li><a  href="index.html#about" title="About">About Me</a></li>
                     <li><a  href="index.html#portfolio" title="Services">Portfolio</a></li> -->
                     <!-- <li><a class="smoothscroll" href="#portfolio" title="Works">Works</a></li> -->
-                   <li><a class="smoothscroll" href="#reachtome" title="Contact us">Reach to me</a></li>
+                   <li><a class="smoothscroll" href="#reachtome" title="Contact us">Contact</a></li>
                 </ul>
             </nav> <!-- end header-nav-wrap -->
 
@@ -253,7 +253,7 @@
         <div class="row s-footer__main">
             <div class="column large-6">
                 <div class="section-intro" data-aos="fade-up">
-                    <h3 class="subhead">Reach to me</h3>
+                    <h3 class="subhead">Contact</h3>
 
                     <h1 class="display-1">
                     Look for the nearest portkey or use floo powder to reach me but if you're a muggle then you can find me at- 
