project page added

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                     <h1 class="display-1">
                         A Selection of recent projects I have worked on.
                     </h1>
-                    <a href="projects.html" class="btn btn--stroke btn--small"><span> Explore </span></a>
+                    <a href="projects.html" class="btn btn--stroke btn--small"><span> View All Projects </span></a>
                 </div>
             </div>
         </div> <!-- s-porfolio__header -->
@@ -406,7 +406,7 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                         <div class="folio-item__cat"> Experiential Gifting</div>
                         <h4 class="folio-item__title">The Lion Of Indian Advertising</h4>
                     </div>
-                    <a href="indianadvertise.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="indianadvertise.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Piyush Pandey’s roar in the industry can never be unheard of. The inspiration taken from his moustache and creating a lion was the idea behind this. The memento represents the sun, gold, strength, courage, creativity and leadership that represents Piyush Pandey’s personality
 </p>
@@ -426,7 +426,7 @@ A go getter with a strong thirst for knowledge. Practical & attentive to detail,
                         <div class="folio-item__cat">Space Design</div>
                         <h4 class="folio-item__title">Hotstar Specials Launch</h4>
                     </div>
-                    <a href="hotstar.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="hotstar.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Star India had reimagined the content landscape. It was an evening 
 where Star celebrated the giant leaps in creativity and technology. 
@@ -446,7 +446,7 @@ where Star celebrated the giant leaps in creativity and technology.
                         <div class="folio-item__cat">Space Design</div>
                         <h4 class="folio-item__title">RE.Imagine Awards 2019</h4>
                     </div>
-                    <a href="reimagine.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="reimagine.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Everything about the awards experience was reimagined with a sophisticated and elegant undertone as it was the second season of the prestigious RE.Imagine Awards.
 </p>
@@ -462,10 +462,10 @@ where Star celebrated the giant leaps in creativity and technology.
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Sports</div>
+                        <div class="folio-item__cat">Sporting events</div>
                         <h4 class="folio-item__title">ISL Trophy</h4>
                     </div>
-                    <a href="isl.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="isl.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>To design a trophy for the league champions 
 (it’s different from the title season winners)
@@ -487,7 +487,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                        <div class="folio-item__cat">Experiential Gifting</div>
                         <h4 class="folio-item__title">Dawn of Footballing Nation </h4>
                     </div>
-                    <a href="football.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="football.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Richard Scudamore has been a supporter to Star India’s vision of taking football to every corner of India so Star India decided to give a memento to Richard Scudamore for his support that showcases the dawn of football in India.
 </p>
@@ -506,7 +506,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Space Design</div>
                         <h4 class="folio-item__title">HNI Dinner</h4>
                     </div>
-                    <a href="hni.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="hni.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Franchise and Star India leadership networking event at Taj Colaba,
                             Mumbai. An informal but elegant setup was created with mirrored backdrop 
@@ -528,10 +528,10 @@ I was asked to particularly make a classic circular shield as the league wanted 
                     
 
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Sports</div>
+                        <div class="folio-item__cat">Sporting events</div>
                         <h4 class="folio-item__title">Kabaddi Auction</h4>
                     </div>
-                    <a href="kabbadi.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="kabbadi.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Designed and developed the overall setup, branding and creatives for 
                             the VIVO Pro Kabaddi League Season 5,6 and 7. 
@@ -550,10 +550,10 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         </a>
                     </div>
                       <div class="folio-item__info">
-                        <div class="folio-item__cat">Sports</div>
+                        <div class="folio-item__cat">Sporting events</div>
                         <h4 class="folio-item__title">The World Cup</h4>
                     </div>
-                    <a href="worldcup.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Created the brand experience for all the VIP guests travelling on behalf of Star India, to the ICC World Cup 2019. We planned, created and sourced various personalized elements to make their experience one of a kind.
 </p>
@@ -572,7 +572,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">The Lamp</h4>
                     </div>
-                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="project1.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
@@ -590,7 +590,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Product Design</div>
                         <h4 class="folio-item__title">The Lamp</h4>
                     </div>
-                    <a href="project1.html" title="View More" class="folio-item__project-link">View More</a>
+                    <a href="project1.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                     </div>
