--- a/indianadvertise.html
+++ b/indianadvertise.html
@@ -182,7 +182,7 @@
         <div class="row">
 
              <div class="column large-10 tab-full">
-                 <img src="images/portfolio/pictures/Piyush Pandey Mind Map.jpg" class="img-responsive" style="border-radius:24px;">
+                 <img src="images/portfolio/pictures/Piyush Pandey Mind Map.jpg" class="img-responsive">
             </div>
 
             <div class="column large-2 tab-full">
@@ -218,7 +218,7 @@
             <br />
 
             <div class="column large-12 tab-full">
-                 <img src="images/portfolio/pictures/prod.png" class="img-responsive" style="border-radius:24px;">
+                 <img src="images/portfolio/pictures/prod.png" class="img-responsive">
             </div>
 
             
