--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ where Star celebrated the giant leaps in creativity and technology.
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">ISL Trophy</h4>
                     </div>
                     <a href="isl.html" title="Explore" class="folio-item__project-link">Explore</a>
@@ -528,7 +528,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                     
 
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">Kabaddi Auction</h4>
                     </div>
                     <a href="kabbadi.html" title="Explore" class="folio-item__project-link">Explore</a>
@@ -550,7 +550,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         </a>
                     </div>
                       <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">The World Cup</h4>
                     </div>
                     <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
