--- a/indianadvertise.html
+++ b/indianadvertise.html
@@ -144,8 +144,6 @@
                         </div>
                         <p>
                            Mr. Piyush Pandey was felicitated with the ‘Honor of Cannes Lion of Saint Mark’. He has long been a great supporter and partner to Star India’s vision to imagine more and hence we decided to give a memento, which is inspired by the lion, but re-imagined through Star India’s lens.
-
-
                         </p>
                        
                     </div>
@@ -168,8 +166,7 @@
                 </div>
 
                 <p data-aos="fade-up" class="text-center">
-                   Piyush Pandey’s roar in the industry can never be unheard of. The inspiration taken from his moustache and creating a lion was the idea behind this. The memento represents the sun, gold, strength, courage, creativity and leadership that represents Piyush Pandey’s personality
-                </p>
+                   Piyush Pandey’s roar in the industry can never be unheard of. The inspiration taken from his moustache and creating a lion was the idea behind this. The memento represents the sun, gold, strength, courage, creativity and leadership that represents Piyush Pandey’s personality </p>
             </div>
 
              <div class="column large-6 tab-full">
@@ -410,21 +407,5 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/wow.js"></script>
 
-    <script type="text/javascript">
-    $(document).ready(function () {
-    $("img").click(function () {
-        var t = $(this).attr("src");
-        $(".modal-body").html("<img src='" + t + "' class='modal-img'>");
-        $("#myModal").modal();
-    });
-
-    $("video").click(function () {
-        var v = $("video > source");
-        var t = v.attr("src");
-        $(".modal-body").html("<video class='model-vid' controls><source src='" + t + "' type='video/mp4'></source></video>");
-        $("#myModal").modal();
-    });
-});//EOF Document.ready
-    </script>
 
 </body>
