--- a/projects.html
+++ b/projects.html
@@ -139,7 +139,7 @@ The over arching design theme was: Cricket and Creativity.
             <!-- <li data-filter="*" class="filter-active">All</li> -->
             <li data-filter=".filter-gifting">Experiential Gifting</li>
             <li data-filter=".filter-space">Space Design</li>
-            <li data-filter=".filter-sports">Sporting events</li>
+            <li data-filter=".filter-sports">Sporting Events</li>
             <li data-filter=".filter-graphics">Graphic Design</li>
             <li data-filter=".filter-personal">Personal Exploration</li>
           </ul>
@@ -225,7 +225,7 @@ where Star celebrated the giant leaps in creativity and technology.
                         </a>
                     </div>
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">ISL Trophy</h4>
                     </div>
                     <a href="isl.html" title="Explore" class="folio-item__project-link">Explore</a>
@@ -301,7 +301,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                     
 
                     <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">Kabaddi Auction</h4>
                     </div>
                     <a href="kabbadi.html" title="Explore" class="folio-item__project-link">Explore</a>
@@ -325,7 +325,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         </a>
                     </div>
                       <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">The World Cup</h4>
                     </div>
                     <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
@@ -350,7 +350,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Experiential Gifting</div>
                         <h4 class="folio-item__title">The Wedding Gift</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="weddinggift.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>The painting symbolizes the story of a marriage where 2 artists (sculptor and painter) come together and use each other’s support to create this masterpiece. It shows the importance of teamwork and understanding & complimenting each other.
 </p>
@@ -372,7 +372,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Graphic Design</div>
                         <h4 class="folio-item__title">Star Winners World cup trip</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="startwinners.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Created the brand experience for all the winners of Re.imagine Awards travelling to the ICC World Cup 2019. Planned, created and sourced various personalized elements to make their experience one of a kind</p>
                     </div>
@@ -393,7 +393,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Space Design</div>
                         <h4 class="folio-item__title">Re.imagine 2018</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="remgine18.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>The theme was to design a starry awards night for the creative media industry and showcase grandeur and various content at the same time.
 </p>
@@ -415,7 +415,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Graphic Design</div>
                         <h4 class="folio-item__title">Kypsa</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="kypsa.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Developed UI design for all the Unilever skin products to be displayed on Nykaa and Purplle.
  
@@ -438,7 +438,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Graphic Design</div>
                         <h4 class="folio-item__title">Kypsa Branding</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="kypsabranding.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>Branding Identity of ‘Kypsa - Strategic Design’ in terms of providing a logo identity, website creation and creatives.
 </p>
@@ -460,7 +460,7 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         <div class="folio-item__cat">Graphic Design</div>
                         <h4 class="folio-item__title">GEM</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="gem.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>GEM is an online gifting and entertainment portal created for internal employees to request and get access of the tickets for sporting, entertainment and other events.
 </p>
@@ -479,10 +479,10 @@ I was asked to particularly make a classic circular shield as the league wanted 
                         </a>
                     </div>
                       <div class="folio-item__info">
-                        <div class="folio-item__cat">Sporting events</div>
+                        <div class="folio-item__cat">Sporting Events</div>
                         <h4 class="folio-item__title">Kabbadi Branding</h4>
                     </div>
-                    <a href="worldcup.html" title="Explore" class="folio-item__project-link">Explore</a>
+                    <a href="kabbadibranding.html" title="Explore" class="folio-item__project-link">Explore</a>
                     <div class="folio-item__caption">
                         <p>The PKL Logo has some components which define the Playoffs as well as the game of Kabaddi.
 </p>
