--- a/indianadvertise.html
+++ b/indianadvertise.html
@@ -214,7 +214,7 @@
             <br />
 
             <div class="column large-12 tab-full">
-                 <img src="images/portfolio/pictures/prod.png" class="img-responsive">
+                 <img src="images/portfolio/pictures/prod.png" class="img-responsive" >
             </div>
 
             
@@ -230,7 +230,7 @@
                         <h1 class="display-1">Final Output 
                         </h1>
 
-                        <img src="images/portfolio/pictures/Final frame.png" class="img-responsive">
+                        <img src="images/portfolio/pictures/Final frame.png" class="img-responsive" style="margin-left:-50px;">
                 </div>
 
                  
